Create vehicle APIs
